--- a/online-zoo/assets/styles/layout/header.scss
+++ b/online-zoo/assets/styles/layout/header.scss
@@ -4,18 +4,24 @@
     height: 80px;
     width: 100%;
     background-color: $main-color-one;
-    z-index: 10;
+    z-index: 30;
+    @media (max-width: 640px) {
+        position: fixed;
+        height: 34px;
+    }
+    @media (max-width: 640px) {
+        position: fixed;
+        height: 34px;
+    }
 }
 .header__donate {
-    position: static
+    position: static;
+    @media (max-width: 640px) {
+        position: fixed;
+    }
 }
 
-h1 {
-    padding: 0;
-    margin: 0;
-    font-size: 19px;
-    font-weight: 400;
-}
+
 
 .header__container {
     display: grid;
@@ -25,6 +31,9 @@ h1 {
     height: 100%;
     @media (max-width: 1000px) {
         grid-template-columns: 8.72% 52.55% 38.72%;
+    }
+    @media (max-width: 640px) {
+        grid-template-columns: 50% 50%;
     }
 }
 
@@ -38,6 +47,14 @@ h1 {
     border: solid 1px white;
     border-radius: 2px;
     background: url("../../assets/icons/bamboo.svg") no-repeat 9px 23px;
+    @media (max-width: 640px) {
+        justify-self: start;
+        width: 46.93px;
+        height: 29.03px;
+        background-size: 7px;
+        background-position: 4px 14px;
+        border: none;
+    }
     a {
         text-decoration: none;
         color: white;
@@ -48,6 +65,15 @@ h1 {
         &:hover {
             cursor: pointer;
         }
+        h1 {
+            padding: 0;
+            margin: 0;
+            font-size: 19px;
+            font-weight: 400;
+            @media (max-width: 640px) {
+                font-size: 12.29px;
+            }
+        }
     }
 }
 
@@ -55,6 +81,9 @@ h1 {
     width: 88.22%;
     @media (max-width: 1000px) {
         width: 87.24%;
+    }
+    @media (max-width: 640px) {
+        display: none;
     }
 }
 
@@ -71,5 +100,8 @@ h1 {
             cursor: pointer;
             color: $main-color-two;
         }
+    }
+    @media (max-width: 640px) {
+        display: none;
     }
 }
