--- a/online-zoo/assets/styles/components/button.scss
+++ b/online-zoo/assets/styles/components/button.scss
@@ -1,4 +1,5 @@
 .button-main {
+    display: block;
     background: linear-gradient(113.96deg, #F9804B 1.49%, #FE9013 101.44%);
     text-transform: uppercase;
     color: white;
