--- a/online-zoo/assets/styles/components/slider.scss
+++ b/online-zoo/assets/styles/components/slider.scss
@@ -15,36 +15,39 @@
         border-radius: 50%;
     }
     @media(max-width: 1000px) {
+        top: 430px;
+        left: 323px;
+        width: 295px;
+    }
+    @media(max-width: 640px) {
+        top: 405px;
+        left: 223px;
+        width: 154px;
+    }
+    @media(max-width: 320px) {
         display: none;
     }
 }
-.slider__nav__buttons_1000 {
-    display: flex;
-    justify-content: space-between;
-    width: 295px;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    justify-self: center;
-    .slider__button {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 62px;
-        height: 62px;
-        border-radius: 50%;
+.slider__visible-cards {
+        overflow: hidden;
+        @media(max-width: 640px) {
+            width: 600px;
+        }
+        @media(max-width: 320px) {
+            width: 320px;
+        }
     }
-    @media(min-width: 1001px) {
-        display: none;
-    }
-}
-
 .slider__cards {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px 30px;
     width: 100%;
     @media(max-width: 1000px) {
-        grid-gap: 15px 30px;
+        grid-gap: 92px 30px;
+    }
+    @media(max-width: 320px) {
+        grid-row-gap: 20px;
+        grid-template-columns: 1fr;
     }
     .slider__card {
         display: flex;
@@ -60,6 +63,10 @@
             width: 294px;
             height: 354px;
         }
+        @media(max-width: 640px) {
+            width: 285px;
+            height: 332px;
+        }
         .slider__card-image {
             width: 366px;
             height: 366px;
@@ -70,7 +77,12 @@
                 width: 294px;
                 height: 294px;
             }
+            @media(max-width: 640px) {
+                width: 285px;
+                height: 285px;
+            }
             img {
+                display: block;
                 width: 100%;
                 height: 100%;
             }
@@ -82,6 +94,10 @@
             transition: all 1s ease;
             @media(max-width: 1000px) {
                 width: 264px;
+            }
+            @media(max-width: 640px) {
+                align-items: center;
+                margin-bottom: 8px;
             }
         }
         .slider__card-description-text {
@@ -95,6 +111,12 @@
                 text-transform: uppercase;
                 color: #000000;
                 transition: all 1s ease;
+                @media(max-width: 640px) {
+                    font-size: 12.4695px;
+                    line-height: 12px;
+                    align-items: center;
+                    margin-left: 0px;
+                }
             }
             .slider__card-location {
                 margin-left: 16px;
@@ -104,6 +126,12 @@
                 line-height: 16px;
                 color: #000000;
                 transition: all 1s ease;
+                @media(max-width: 640px) {
+                    font-size: 11.6901px;
+                    margin-bottom: 0px;
+                    line-height: 10px;
+                    margin-left: 0px;
+                }
             }
             
         }
@@ -111,13 +139,25 @@
             width: 33px;
             height: 37px;
             margin-right: 12px;
-            background: url("../../assets/icons/banana-bamboo_icon.svg");
+            background: url("../../assets/icons/banana-bamboo_icon.svg") no-repeat center center;
+            @media(max-width: 640px) {
+                width: 25.72px;
+                height: 28.84px;
+                background-size: 25.72px 28.84px;
+                margin-right: 0px;
+            }
         }
         .slider__card-meet {
             width: 48px;
             height: 38px;
             margin-right: 8px;
-            background: url("../../assets/icons/meet-fish_icon.svg");
+            background: url("../../assets/icons/meet-fish_icon.svg") no-repeat center center;
+            @media(max-width: 640px) {
+                width: 37.41px;
+                height: 29.62px;
+                background-size: 37.41px 29.62px;
+                margin-right: 0px;
+            }
         }
         &:hover {
             .slider__card-description {
@@ -128,6 +168,10 @@
                 width: 386px;
                 height: 386px;
                 transform: translateY(-15px);
+                @media(max-width: 1000px) {
+                    width: 305px;
+                    height: 305px;
+                }
             }
             .slider__card-name {
                 color: #FFFFFF;
