--- a/online-zoo/assets/styles/layout/animal.scss
+++ b/online-zoo/assets/styles/layout/animal.scss
@@ -1,19 +1,24 @@
-
 .animal__bg {
     display: block;
     width: 100%;
     height: 100%;
     @media(max-width: 1000px) {
-        width: auto;
-        margin-left: -170px;
-    }
-}
-@media(max-width: 1000px) {
-    .animal {
-       height: 390px; 
-    }
-    .animal__img-wrap {
         width: 100%;
-        overflow: hidden;
+        object-fit: cover;
+    }
+    @media(max-width: 640px) {
+        width: 100%;
+        margin-left: 0px;
+        object-fit: cover;
     }
 }
+.animal {
+    @media(max-width: 1000px) {
+        height: 390px; 
+    }
+    @media(max-width: 640px) {
+        height: 335px; 
+        margin-top: 34px;
+    }
+}
+
