--- a/online-zoo/assets/styles/layout/backstage.scss
+++ b/online-zoo/assets/styles/layout/backstage.scss
@@ -2,7 +2,10 @@
     background-image: url("../../assets/images/flower.jpg");
     background-repeat: no-repeat;
     background-position: 1400px 12px;
-
+    @media(max-width: 640px) {
+        background-position: 500px 0px;
+        background-size: 231px 476px; 
+    }
 }
 
 .backstage__content {
@@ -14,7 +17,11 @@
     padding-bottom: 118px;
     @media(max-width: 1000px) {
         padding-top: 100px;
-        padding-bottom: 145px; 
+        padding-bottom: 83px; 
+    }
+    @media(max-width: 640px) {
+        padding-top: 60px;
+        padding-bottom: 18px; 
     }
 }
 
@@ -41,8 +48,16 @@
     .question-title {
         margin: 54px 0 34px;
         font-size: 24px;
+        @media(max-width: 640px) {
+            margin: 30px 0 20px;
+        }
     }
     @media(max-width: 1000px) {
         width: 454px;
+    }
+}
+.backstage__bamboo-cap {
+    @media(max-width: 640px) {
+        display: none;
     }
 }
