--- a/online-zoo/assets/styles/layout/pick-friend.scss
+++ b/online-zoo/assets/styles/layout/pick-friend.scss
@@ -6,21 +6,35 @@
         padding-top: 30px;
         padding-bottom: 50px;
     }
+    @media(max-width: 640px) {
+        padding-top: 19px;
+        padding-bottom: 20px;
+    }
 }
 .pick-friend__container {
     text-align: center;
     background-color: rgba(253, 253, 255, 0.52);
     border-radius: 20px;
     padding-top: 41px;
+    padding-bottom: 59px;
     margin: 0 auto;
     @media(max-width: 1000px) {
         padding-top: 30px;
+        padding-bottom: 50px;
+    }
+    @media(max-width: 640px) {
+        width: 100%;
+        padding-top: 10px;
+        padding-bottom: 60px;
     }
     .pick-friend__title {
         font-weight: 400;
         font-size: 48px;
         line-height: 58px;
         color: #FE9013;
+        @media(max-width: 640px) {
+            font-size: 42px;
+        }
     }
     .pick-friend__title-2 {
         margin: 60px 0px 40px;
@@ -36,6 +50,7 @@
 .pick-friend__text {
     text-align: start;
     margin-left: 99px;
+    
     .text-1 {
         font-weight: 400;
         font-size: 24px;
@@ -44,6 +59,9 @@
         margin: 30px 0px 40px 0;
         @media(max-width: 1000px) {
             margin: 20px 0;
+        }
+        @media(max-width: 640px) {
+            font-size: 24px;
         }
     }
     .text-2 {
@@ -55,6 +73,9 @@
         @media(max-width: 1000px) {
             margin-right: 80px;
         }
+        @media(max-width: 640px) {
+            margin-right: 0px;
+        }
     }
     .text-3 {
         font-weight: 400;
@@ -65,6 +86,9 @@
         @media(max-width: 1000px) {
             margin-right: 80px;
         }
+        @media(max-width: 640px) {
+            margin-right: 0px;
+        }
         a {
             color:#333B41;
             text-decoration: none;
@@ -74,14 +98,23 @@
     @media(max-width: 1000px) {
         margin-left: 49px;
     }
+    @media(max-width: 640px) {
+        margin-left: 20px;
+    }
 }
 .pick-friend__stages {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     width: 764px;
     margin: 0 auto;
-
+    @media(max-width: 640px) {
+        width: 588px;
+    }
+    @media(max-width: 320px) {
+        width: 200px;
+    }
     .pick-friend__stage {
         width: 168px;
         height: 244px;
@@ -112,12 +145,20 @@
     width: 69px;
     height: 35.08px;
     margin-bottom: 90px;
+    @media(max-width: 640px) {
+        margin-left: -50px;
+        margin-bottom: 240px;
+        z-index: 10;    
+    }
 }
 .pick-friend__button {
     padding: 16px 75px;
     border-radius: 25px;
-    margin: 60px auto 60px;
+    margin: 60px auto 0;
     @media(max-width: 1000px) {
-        margin: 70px auto 50px; 
+        margin: 70px auto 0; 
+    }
+    @media(max-width: 640px) {
+        margin: 40px auto 0; 
     }
 }
