--- a/online-zoo/assets/styles/layout/testimonials.scss
+++ b/online-zoo/assets/styles/layout/testimonials.scss
@@ -9,6 +9,9 @@
     @media(max-width: 1000px) {
         padding: 100px 0 140px; 
     }
+    @media(max-width: 640px) {
+        padding: 60px 0 80px; 
+    }
 }
 h3 {
     margin-bottom: 47px;
@@ -28,5 +31,9 @@ h3 {
     margin-top: 31px;
     @media(max-width: 1000px) {
         margin-top: 52px;
+    }
+    @media(max-width: 640px) {
+        padding: 17px 40px;
+        margin: 40px auto 0;
     }
 }
